--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio | Gurvinder Singh</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/f5cb912828.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,7 +23,8 @@
                 <li>Contact</li>
                 <li>Profile</li>
                 <a href="login.html">
-                    <button id="btn-login">Login</button>
+                    <i class="fa-solid fa-user" style="color: #FFD43B;"></i>
+                    <!-- <button id="btn-login">Login</button> -->
                 </a>
             </ul>
         </nav>
