banner text added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Portfolio | Gurvinder Singh</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/f5cb912828.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,8 +22,7 @@
                 <li>Contact</li>
                 <li>Profile</li>
                 <a href="login.html">
-                    <i class="fa-solid fa-user" style="color: #FFD43B;"></i>
-                    <!-- <button id="btn-login">Login</button> -->
+                    <button id="btn-login">Login</button>
                 </a>
             </ul>
         </nav>
@@ -34,10 +32,11 @@
 
     <section id="profile-banner">
         <div class="col">
-            A
-        </div>
-        <div class="col">
-            C
+            <span>Hii, am</span>
+            <h1>Gurvinder Singh</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, laudantium aliquid corrupti quod tenetur
+                cum maiores odit iusto labore quas iure excepturi illum reiciendis explicabo repellendus hic vero omnis
+                quia?</p>
         </div>
     </section>
 
